infrastructure/base/networking/http-redirect-ingress.yaml
#
# This source file is part of the Stanford Spezi open source project
#
# SPDX-FileCopyrightText: 2026 Stanford University and the project authors (see CONTRIBUTORS.md)
#
# SPDX-License-Identifier: MIT
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect
  namespace: app-name-placeholder
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`.+`)
      priority: 1
      middlewares:
        - name: redirect-https
      services:
        - name: app-name-placeholder-web-service
          port: 80
