infrastructure/base/networking/main-ingress.yaml
#
# This source file is part of the Stanford Spezi open source project
#
# SPDX-FileCopyrightText: 2026 Stanford University and the project authors (see CONTRIBUTORS.md)
#
# SPDX-License-Identifier: MIT
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-name-placeholder-ingress
  namespace: app-name-placeholder
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`DOMAIN_PLACEHOLDER`)
      priority: 1
      services:
        - name: app-name-placeholder-web-service
          port: 80
      middlewares:
        - name: security-headers
    - kind: Rule
      match: Host(`DOMAIN_PLACEHOLDER`) && PathPrefix(`/api`)
      priority: 2
      services:
        - name: app-name-placeholder-server-service
          port: 8080
      middlewares:
        - name: security-headers
  tls:
    secretName: app-name-placeholder-main-tls-secret
